src/components/grid2/grid.css
.gridsvg {
  padding: 0;
  margin: 0;
  display: block;
  position: relative;
}
.padding {
  border: 1em solid transparent;
}
.gridsvg * {
  margin: 0;
  padding: 0;
  overflow: hidden;
}
.viewport:active {
  cursor: move;
}
.dragover {
  background: rgba(255, 0, 255, 0.9);
}
.viewport {
  margin: 0;
  width: 100%;
  max-height: 100%;
  height: 100%;
  background: rgb(248, 249, 250);
}

.viewport .gridsvg {
  background: white;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
}

